--- a/language/ru.json
+++ b/language/ru.json
@@ -2890,9 +2890,7 @@
             ],
             "texto2": "_< Языковые варианты 🌎 >_ ",
             "texto3": "_< Язык Групп >_",
-            "texto4": " *_🚀 Новая RPG-игра для майнинга_*",
-            "texto5": "Сделайте пожертвование",
-            "texto6": "Это поможет поддерживать сервер в рабочем состоянии."
+            "texto4": " *_🚀 Новая RPG-игра для майнинга_*"
         },
         "mipilot_serbot_broadcast": {
             "texto1": "*〔 РАСПРОСТРАНЕНИЕ СООБЩЕНИЯ ПО СУБ-БОТАМ 〕*\n\n",
@@ -2943,14 +2941,14 @@
             ]
         },
         "owner_actualizacion": {
-            "texto1": "*[❗] Команда успешно активирована, вы будете уведомлены, когда произойдет какое - либо изменение в официальном хранилище.*",
-            "texto2": [
-                "*[❗] Репозиторий был обновлен!*\n* - Repository:*",
-                "*- Сообщение о совершении:*",
-                "*- Сделано:*"
-            ],
-            "texto3": "*[❗️] локальные изменения были внесены в файлах бота, которые противоречат обновлениям репозитория. Чтобы обновить, переустановить бот или выполнять обновления вручную.*\n\n*Файлы конфликта:*"
-        },
+ "texto1": "*[❗] Команда успешно активирована, вы будете уведомлены, когда произойдет какое - либо изменение в официальном хранилище.*",
+ "texto2": [
+ "*[❗] Репозиторий был обновлен!*\n* - Repository:*",
+ "*- Сообщение о совершении:*",
+ "*- Сделано:*"
+ ],
+ "texto3": "*[❗️] локальные изменения были внесены в файлах бота, которые противоречат обновлениям репозитория. Чтобы обновить, переустановить бот или выполнять обновления вручную.*\n\n*Файлы конфликта:*"
+ },
         "owner_add_del_owner": {
             "texto1": [
                 "*[❗] Неправильное использование команды.*\n\n*—◉ Пример правильного использования:*\n*◉",
@@ -3198,11 +3196,11 @@
             "texto2": "Изображение не существует в корневой папке."
         },
         "owner_actualizar": {
-            "texto1": "*_< Владелец - обновление />_*\n\n*[✅] Нет никаких обновлений.*",
-            "texto2": "*_< Владелец - обновление />_*\n\n*[ℹ️] Обновление успешно закончено.*\n\n",
-            "texto3": "*_< Владелец - обновление />_*\n\n*[ℹ️] локальные изменения были внесены в файлах бота, которые противоречат обновлениям репозитория. Чтобы обновить, переустановить бот или выполнять обновления вручную.*\n\n*Файлы конфликта:*",
-            "texto4": "*_< Владелец - обновление />_*\n\n*[ℹ️] произошла ошибка. Пожалуйста, попробуйте еще раз позже.*"
-        },
+ "texto1": "*_< Владелец - обновление />_*\n\n*[✅] Нет никаких обновлений.*",
+ "texto2": "*_< Владелец - обновление />_*\n\n*[ℹ️] Обновление успешно закончено.*\n\n",
+ "texto3": "*_< Владелец - обновление />_*\n\n*[ℹ️] локальные изменения были внесены в файлах бота, которые противоречат обновлениям репозитория. Чтобы обновить, переустановить бот или выполнять обновления вручную.*\n\n*Файлы конфликта:*",
+ "texto4": "*_< Владелец - обновление />_*\n\n*[ℹ️] произошла ошибка. Пожалуйста, попробуйте еще раз позже.*"
+ },
         "random_kpop": {
             "texto1": [
                 "Использование",
@@ -3725,12 +3723,6 @@
             ],
             "texto3": "[ ! ] Эта команда может использоваться только в группах",
             "texto4": "[ ! ] Эта команда может использоваться только Администраторами"
-        },
-        "doar": {
-            "texto1": [
-                "🤩 *Пожертвуйте,* _ваша помощь позволяет системе продолжать работу._ \n\n🌟Хотите сделать пожертвование с помощью кредитной карты:\n*15,00 ₽* -",
-                "_Эта ссылка была создана ботом_ Завершите ваше пожертвование на сайте.\n\nPayPal: Jeffersonalionco@gmail.com"
-            ]
         }
     },
     "handler": {
@@ -3803,5 +3795,6 @@
             "bk9LText_T": "Если хотите без настройки:\n.bk9short и вставьте ссылку\nПример:\n.bk9short https://bk9.site/\nЕсли хотите с настройкой:\n.Short, вставьте ссылку + слово\nПример:\n.bk9short https://bk9.site/ + Суйи",
             "bk9LTaked_T": "Эта настройка уже занята, попробуйте другую."
         }
-    }
+
+        }
 }
