--- a/language/ar.json
+++ b/language/ar.json
@@ -3451,9 +3451,7 @@
             ],
             "texto2": "_< خيارات اللغة 🌎 >_ ",
             "texto3": "_< لغة الجماعات >_",
-            "texto4": " *_🚀 لعبة تقمص أدوار جديدة، للتعدين_*",
-            "texto5": "قم بالتبرع",
-            "texto6": "سيساعد هذا في إبقاء الخادم نشطًا."
+            "texto4": " *_🚀 لعبة تقمص أدوار جديدة، للتعدين_*"
         },
         "mipilot_serbot_broadcast": {
             "texto1": "*〔 انتشار إلى البوتات الفرعية 〕*\n\n",
@@ -3504,14 +3502,14 @@
             ]
         },
         "owner_actualizacion": {
-            "texto1": "*[❗] تنشيط تنشيطك بنجاح ، سيتم إخطارك عندما يكون هناك أي تغيير في المستودع الرسمي.*",
-            "texto2": [
-                "*[❗] تم تحديث المستودع!*\n* - مستودع:*",
-                "*- رسالة ارتكاب:*",
-                "*- التي يرتكبها:*"
-            ],
-            "texto3": "*[❗️] تم إجراء تغييرات محلية في ملفات bot التي تتعارض مع تحديثات المستودع. يدويًا.*\n\n*ملفات الصراع:*"
-        },
+ "texto1": "*[❗] تنشيط تنشيطك بنجاح ، سيتم إخطارك عندما يكون هناك أي تغيير في المستودع الرسمي.*",
+ "texto2": [
+ "*[❗] تم تحديث المستودع!*\n* - مستودع:*",
+ "*- رسالة ارتكاب:*",
+ "*- التي يرتكبها:*"
+ ],
+ "texto3": "*[❗️] تم إجراء تغييرات محلية في ملفات bot التي تتعارض مع تحديثات المستودع. يدويًا.*\n\n*ملفات الصراع:*"
+ },
         "owner_add_del_owner": {
             "texto1": [
                 "*[❗] استخدام غير صحيح للأمر.*\n\n*—◉ مثال على الاستخدام الصحيح:*\n*◉",
@@ -3794,11 +3792,11 @@
             "texto2": "الصورة غير موجودة في المجلد الجذر."
         },
         "owner_actualizar": {
-            "texto1": "*_< المالك - تحديث />_*\n\n*[✅] لا توجد تحديثات معلقة.*",
-            "texto2": "*_< المالك - تحديث />_*\n\n*[ℹ️] التحديث الانتهاء بنجاح.*\n\n",
-            "texto3": "*_< المالك - تحديث />_*\n\n*[ℹ️] تم إجراء تغييرات محلية في ملفات bot التي تتعارض مع تحديثات المستودع. يدويًا.*\n\n*ملفات الصراع:*",
-            "texto4": "*_< المالك - تحديث />_*\n\n*[ℹ️] حدث خطأ. يرجى تجربته مرة أخرى لاحقًا.*"
-        },
+ "texto1": "*_< المالك - تحديث />_*\n\n*[✅] لا توجد تحديثات معلقة.*",
+ "texto2": "*_< المالك - تحديث />_*\n\n*[ℹ️] التحديث الانتهاء بنجاح.*\n\n",
+ "texto3": "*_< المالك - تحديث />_*\n\n*[ℹ️] تم إجراء تغييرات محلية في ملفات bot التي تتعارض مع تحديثات المستودع. يدويًا.*\n\n*ملفات الصراع:*",
+ "texto4": "*_< المالك - تحديث />_*\n\n*[ℹ️] حدث خطأ. يرجى تجربته مرة أخرى لاحقًا.*"
+ },
         "random_kpop": {
             "texto1": [
                 "استخدم",
@@ -4322,12 +4320,6 @@
             ],
             "texto3": "[ ! ] يمكن استخدام هذا الأمر فقط في المجموعات",
             "texto4": "[ ! ] يمكن استخدام هذا الأمر فقط بواسطة المشرفين"
-        },
-        "doar": {
-            "texto1": [
-                "🤩 *ساهم،* _بمساعدتك يستمر هذا النظام في العمل._ \n\n🌟هل ترغب في التبرع باستخدام بطاقة الائتمان:\n*15.00 ريال* -",
-                "_تم إنشاء هذا الرابط بواسطة البوت_ أكمل تبرعك على الموقع.\n\nPayPal: Jeffersonalionco@gmail.com"
-            ]
         }
     },
     "handler": {
@@ -4400,5 +4392,6 @@
             "bk9LText_T": "لو تبغاه بدون تخصيص سوي :\n. اختصار وحط رابط\nمثال :\n.اختصار https://bk9.site/\nلو تبغاه بتخصيص سوي :\n.اختصار حط رابط + كلمة\nمثال :\n.اختصار https://bk9.site/ + قروب_الملصقات",
             "bk9LTaked_T": "هذا التخصيص مأخوذ، جرب اخر."
         }
-    }
+
+        }
 }
