Commit de las alteraciones locales

--- a/language/ar.json
+++ b/language/ar.json
@@ -4326,7 +4326,8 @@
         "doar": {
             "texto1": [
                 "🤩 *ساهم،* _بمساعدتك يستمر هذا النظام في العمل._ \n\n🌟هل ترغب في التبرع باستخدام بطاقة الائتمان:\n*15.00 ريال* -",
-                "_تم إنشاء هذا الرابط بواسطة البوت_ أكمل تبرعك على الموقع.\n\nPayPal: Jeffersonalionco@gmail.com"
+                "_تم إنشاء هذا الرابط بواسطة البوت_ أكمل تبرعك على الموقع.\n\nPayPal: Jeffersonalionco@gmail.com",
+                "*+ Mercado pago:*\nhttps://link.mercadopago.com.br/jeffersonalionco\n\n _Seu nome aparecera Aqui:_ \n1- Mateus Scarpa R$30.00"
             ]
         }
     },
