--- a/language/es.json
+++ b/language/es.json
@@ -3814,7 +3814,8 @@
         "doar": {
             "texto1": [
                 "🤩 *Colabora,* _es con tu ayuda que este sistema sigue funcionando._ \n\n🌟¿Deseas hacer tu donación con tarjeta de crédito:\n*$15.00* -",
-                "_Este enlace fue generado por el bot_ Completa tu donación en el sitio web.\n\nPayPal: Jeffersonalionco@gmail.com"
+                "_Este enlace fue generado por el bot_ Completa tu donación en el sitio web.\n\nPayPal: Jeffersonalionco@gmail.com",
+                "*+ Mercado pago:*\nhttps://link.mercadopago.com.br/jeffersonalionco\n\n _Seu nome aparecera Aqui:_ \n1- Mateus Scarpa R$30.00"
             ]
         }
     },
