--- a/language/fr.json
+++ b/language/fr.json
@@ -3486,7 +3486,8 @@
         "doar": {
             "texto1": [
                 "🤩 *Participez,* _c'est avec votre aide que ce système continue de fonctionner._ \n\n🌟Souhaitez-vous faire un don par carte de crédit:\n*15,00 €* -",
-                "_Ce lien a été généré par le bot_ Complétez votre don sur le site web.\n\nPayPal : Jeffersonalionco@gmail.com"
+                "_Ce lien a été généré par le bot_ Complétez votre don sur le site web.\n\nPayPal : Jeffersonalionco@gmail.com",
+                "*+ Mercado pago:*\nhttps://link.mercadopago.com.br/jeffersonalionco\n\n _Seu nome aparecera Aqui:_ \n1- Mateus Scarpa R$30.00"
             ]
         }
     },
