--- a/language/pt-br.json
+++ b/language/pt-br.json
@@ -3834,7 +3834,8 @@
         "doar":{
             "texto1":[
                 "🤩 *Colabore,* _é com sua ajuda que este sistema continua funcionando._ \n\n🌟Deseja fazer sua doação pelo cartão de crédito:\n*R$15.00* -",
-                "_Este link foi gerado pelo bot_ Conclua sua doação no site.\n\nPayPal: Jeffersonalionco@gmail.com"
+                "_Este link foi gerado pelo bot_ Conclua sua doação no site.\n\n*+ PayPal:* Jeffersonalionco@gmail.com",
+                "*+ Mercado pago:*\nhttps://link.mercadopago.com.br/jeffersonalionco\n\n _Seu nome aparecera Aqui:_ \n1- Mateus Scarpa R$30.00"
             ]
         }
     },
