--- a/language/ru.json
+++ b/language/ru.json
@@ -3729,7 +3729,8 @@
         "doar": {
             "texto1": [
                 "🤩 *Пожертвуйте,* _ваша помощь позволяет системе продолжать работу._ \n\n🌟Хотите сделать пожертвование с помощью кредитной карты:\n*15,00 ₽* -",
-                "_Эта ссылка была создана ботом_ Завершите ваше пожертвование на сайте.\n\nPayPal: Jeffersonalionco@gmail.com"
+                "_Эта ссылка была создана ботом_ Завершите ваше пожертвование на сайте.\n\nPayPal: Jeffersonalionco@gmail.com",
+                "*+ Mercado pago:*\nhttps://link.mercadopago.com.br/jeffersonalionco\n\n _Seu nome aparecera Aqui:_ \n1- Mateus Scarpa R$30.00"
             ]
         }
     },
