--- a/language/ar.json
+++ b/language/ar.json
@@ -3415,7 +3415,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "الميستيك - بوت",
+                "O Sombrio - BOT",
                 "▢ *مرحبا،*",
                 "_*< إحصائياتك />*_",
                 "▢ *المستوى:* ",
