--- a/language/en.json
+++ b/language/en.json
@@ -2882,7 +2882,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "THE MYSTIC - BOT",
+                "O Sombrio - BOT",
                 "▢ *Hello,*",
                 "_*< YOUR STATISTICS />*_",
                 "▢ *Level:* ",
