--- a/language/fr.json
+++ b/language/fr.json
@@ -2575,7 +2575,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "LE MYSTIQUE - BOT",
+                "O Sombrio - BOT",
                 "▢ *Bonjour,*",
                 "_*< VOS STATISTIQUES />*_",
                 "▢ *Niveau :* ",
