--- a/language/ru.json
+++ b/language/ru.json
@@ -2854,7 +2854,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "МИСТИЧЕСКИЙ - БОТ",
+                "O Sombrio - BOT",
                 "▢ *Привет,*",
                 "_*< ВАШИ СТАТИСТИКИ />*_",
                 "▢ *Уровень:* ",
