Atualizações do nome

--- a/language/fr.json
+++ b/language/fr.json
@@ -2575,7 +2575,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "O Sombrio - BOT",
+                "𝑶 𝑺𝒐𝒎𝒃𝒓𝒊𝒐 - 𝑩𝑶𝑻",
                 "▢ *Bonjour,*",
                 "_*< VOS STATISTIQUES />*_",
                 "▢ *Niveau :* ",
