--- a/language/pt-br.json
+++ b/language/pt-br.json
@@ -2887,7 +2887,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "O MÍSTICO - BOT",
+                "𝑶 𝑺𝒐𝒎𝒃𝒓𝒊𝒐 - 𝑩𝑶𝑻",
                 "▢ *Olá,*",
                 "_*< SUAS ESTATÍSTICAS />*_",
                 "▢ *Nível:* ",
