--- a/language/ru.json
+++ b/language/ru.json
@@ -2854,7 +2854,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "O Sombrio - BOT",
+                "𝑶 𝑺𝒐𝒎𝒃𝒓𝒊𝒐 - 𝑩𝑶𝑻",
                 "▢ *Привет,*",
                 "_*< ВАШИ СТАТИСТИКИ />*_",
                 "▢ *Уровень:* ",
