--- a/language/es.json
+++ b/language/es.json
@@ -2903,7 +2903,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "O Sombrio - BOT",
+                "𝑶 𝑺𝒐𝒎𝒃𝒓𝒊𝒐 - 𝑩𝑶𝑻",
                 "▢ *Hola,*",
                 "_*< TUS ESTADÍSTICAS />*_",
                 "▢ *Nivel:* ",
