--- a/language/ar.json
+++ b/language/ar.json
@@ -3415,7 +3415,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "O Sombrio - BOT",
+                "𝑶 𝑺𝒐𝒎𝒃𝒓𝒊𝒐 - 𝑩𝑶𝑻",
                 "▢ *مرحبا،*",
                 "_*< إحصائياتك />*_",
                 "▢ *المستوى:* ",
