--- a/language/en.json
+++ b/language/en.json
@@ -2882,7 +2882,7 @@
         },
         "menu_menu": {
             "texto1": [
-                "O Sombrio - BOT",
+                "𝑶 𝑺𝒐𝒎𝒃𝒓𝒊𝒐 - 𝑩𝑶𝑻",
                 "▢ *Hello,*",
                 "_*< YOUR STATISTICS />*_",
                 "▢ *Level:* ",
