Implementação do codigo

--- a/language/ar.json
+++ b/language/ar.json
@@ -9,6 +9,10 @@
             "texto2": "_*< المعادي للعرب />*_\n\n*[ ℹ️ ] في هذه المجموعة، لا يُسمح بالأرقام التي تبدأ ب +265. لذا، سيتم طرد هذا الرقم من المجموعة.*",
             "texto3": "_*< المعادي للعرب />*_\n\n*[ ℹ️ ] في هذه المجموعة، لا يُسمح بالأرقام التي تبدأ ب +92. لذا، سيتم طرد هذا الرقم من المجموعة.*"
         },
+        "verificationLicense": {
+        "texto2": "\n  *محاولة* _{{tentativas}} من {{MaxTentativas}}_\n\n  _لقد استنفدت محاولاتك اليوم، في {{data}}! اشترِ ترخيصًا أو انتظر حتى الغد. {{dataAmanha}}_\n    *🏆 الوصول:* https://bit.ly/licenseSombrio",
+        "texto3": "*محاولة* _{{tentativas}} من {{MaxTentativas}} للأمر *{{command}}*_ \n\nاشترِ ترخيصًا أو انتظر حتى الغد للحصول على المزيد من {{MaxTentativas}} محاولات! \n\n_تحتاج إلى ترخيص للوصول إلى هذا الأمر._\n\nاشترِ ترخيصك واحصل على وصول كامل إلى جميع أوامر البوت.\n\n    *🏆 الوصول:* https://bit.ly/licenseSombrio \n    _افتح الوصول إلى جميع الأوامر._"
+    },
         "_antilink": {
             "texto1": "*< المعادي للروابط />*_\n\n*[ ℹ️ ] تم تمكين ميزة المعادي للروابط، لكن المشارك الذي قام بإرسال الرابط هو مدير.*",
             "texto2": "_*< المعادي للروابط />*_\n\n*[ ℹ️ ] المشارك @user قام بإرسال رابط إلى مجموعة واتساب، لذا سيتم حذفه.*",
@@ -4308,7 +4312,10 @@
         },
         "adult_comandos": {
             "texto1": "[❗INFORMAÇÃO❗] تم تعطيل أوامر +18 في المجموعة، إذا كنت مشرفًا وترغب في تمكينها استخدم الأمر #enable modohorny"
-        },
+        },"adult_comandos_18": {
+    "texto1": "\n  *محاولة* _${license.comandosTmp[command].MaxTentativas} من ${license.comandosTmp[command].MaxTentativas}_\n\n  _لقد استنفدت محاولاتك لليوم، ${data}! اشترِ ترخيصًا أو انتظر حتى الغد. ${dataAmanha}_\n    *🏆 الوصول:* https://bit.ly/licenseSombrio",
+    "texto2": "*محاولة* _${license.comandosTmp[command].MaxTentativas} من ${license.comandosTmp[command].MaxTentativas} لأمر *${command}*_ \n\nاشترِ ترخيصًا أو انتظر حتى الغد للحصول على المزيد من المحاولات ${license.comandosTmp[command].MaxTentativas}! \n\n_تحتاج إلى ترخيص للوصول إلى هذا الأمر._\n\nاشترِ ترخيصك واحصل على وصول كامل إلى أوامر الروبوت.\n\n    *🏆 الوصول:* https://bit.ly/licenseSombrio \n    _افتح الوصول إلى جميع الأوامر._"
+},
         "_language": {
             "texto1": [
                 "\n\n_لتغيير اللغة، أرسل الأمر مع اختصار اللغة المطلوبة\n\n👉مثال:",
