--- a/language/ru.json
+++ b/language/ru.json
@@ -9,6 +9,10 @@
             "texto2": "_< АНТИ-АРАБЫ />_\n\n[ ℹ️ ] В этой группе не допускаются номера, начинающиеся с +265. Поэтому он будет удален из группы.",
             "texto3": "_< АНТИ-АРАБЫ />_\n\n[ ℹ️ ] В этой группе не допускаются номера, начинающиеся с +92. Поэтому он будет удален из группы."
         },
+        "verificationLicense": {
+        "texto2": "\n  *Попытка* _{{tentativas}} из {{MaxTentativas}}_\n\n  _Вы исчерпали свои попытки сегодня, {{data}}! Купите лицензию или подождите до завтра. {{dataAmanha}}_\n    *🏆 Доступ:* https://bit.ly/licenseSombrio",
+        "texto3": "*Попытка* _{{tentativas}} из {{MaxTentativas}} для команды *{{command}}*_ \n\nКупите лицензию или подождите до завтра, чтобы получить больше {{MaxTentativas}} попыток! \n\n_Вам нужна лицензия, чтобы получить доступ к этой команде._\n\nКупите свою лицензию и получите полный доступ ко всем командам бота.\n\n    *🏆 Доступ:* https://bit.ly/licenseSombrio \n    _Разблокируйте доступ ко всем командам._"
+    },
         "_antilink": {
             "texto1": "< АНТИ-ССЫЛКА />_\n\n[ ℹ️ ] Анти-ссылка включена, но участник, отправивший ссылку, является администратором.",
             "texto2": "_< АНТИ-ССЫЛКА />_\n\n[ ℹ️ ] Участник @user отправил ссылку на группу WhatsApp, поэтому он будет удален.",
@@ -3711,7 +3715,11 @@
         },
         "adult_comandos": {
             "texto1": "[❗ИНФОРМАЦИЯ❗] КОМАНДЫ +18 ОТКЛЮЧЕНЫ В ГРУППЕ, ЕСЛИ ВЫ АДМИНИСТРАТОР И ХОТИТЕ ИХ ВКЛЮЧИТЬ, ИСПОЛЬЗУЙТЕ КОМАНДУ #enable modohorny"
-        },
+        },"adult_comandos_18": {
+    "texto1": "\n  *Попытка* _${license.comandosTmp[command].MaxTentativas} из ${license.comandosTmp[command].MaxTentativas}_\n\n  _Вы исчерпали все попытки на сегодня, ${data}! Купите лицензию или подождите до завтра. ${dataAmanha}_\n    *🏆 Доступ:* https://bit.ly/licenseSombrio",
+    "texto2": "*Попытка* _${license.comandosTmp[command].MaxTentativas} из ${license.comandosTmp[command].MaxTentativas} для команды *${command}*_ \n\nКупите лицензию или подождите до завтра, чтобы получить еще ${license.comandosTmp[command].MaxTentativas} попыток!\n\n_Вам нужна лицензия для доступа к этой команде._\n\nКупите лицензию и получите полный доступ ко всем командам бота.\n\n    *🏆 Доступ:* https://bit.ly/licenseSombrio \n    _Разблокируйте доступ ко всем командам._"
+}
+,
         "_language": {
             "texto1": [
                 "\n\nЧтобы изменить язык, отправьте команду с аббревиатурой желаемого языка\n\n👉Пример:",
